<resources>
    <string name="app_name">Data-Colombia-API</string>
    <string name="version" translatable="false">v1.1.1</string>
    <string name="app_tittle">Equipment Inventory App</string>
    <string name="dev_txt">Developed By:</string>
    <string name="aut_name" translatable="false">Sebastian Diaz Paz</string>
    <string name="ic_desc">App icon</string>
    <string name="about">About&#8230;</string>
    <string name="municipal">Municipal Mayor of Nariño</string>
    <string name="inventory">Inventory</string>
    <string name="no_string">No description</string>
    <string name="owner">Owner</string>
    <string name="id" translatable="false">ID</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="extra" translatable="false">Extra</string>
    <string name="type">Type: </string>
    <string name="brand">Brand: </string>
    <string name="status">Status: </string>
    <string name="location">Location: </string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!---
    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
    -->
</resources>
