<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_green">

        <ImageView
            android:id="@+id/item_image_detail"
            android:contentDescription="@string/ic_desc"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@mipmap/ic_inventory_round"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/item_type_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/item_status_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/item_brand_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/item_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>