<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/ic_desc"/>

        <TextView
            android:id="@+id/item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:text="@string/id"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@id/item_image"
            android:layout_marginStart="7dp"/>

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/no_string"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@id/item_id"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/item_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/owner"
            android:textColor="@color/light_gray"
            android:layout_toEndOf="@id/item_image"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>